--- a/Copernicus.Models.Project/app.config
+++ b/Copernicus.Models.Project/app.config
@@ -50,6 +50,10 @@
         <assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.17.0" newVersion="1.0.17.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NuGet.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.8.50926.602" newVersion="2.8.50926.602" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
